# types/supplier.go
@@ -7,6 +7,15 @@ type Supplier struct {
 	PhoneNumber string `json:"phone_number"`
 }
 
+// SupplierDTO represents supplier details
+// @Description Supplier data transfer object
+// @Name SupplierDTO
+// @Id SupplierDTO
+// @Property name type string description="Supplier name" example="Acme Co." required=true
+// @Property country type string description="Country of operation" example="USA" required=true
+// @Property city type string description="City of operation" example="New York" required=true
+// @Property street type string description="Street address" example="Wall Street 123" required=true
+// @Property phone_number type string description="Contact phone number" example="+1234567890" required=true
 type SupplierDTO struct {
 	Name        string `json:"name" db:"name"`
 	Country     string `json:"country" db:"country"`
@@ -14,12 +23,3 @@ type SupplierDTO struct {
 	Street      string `json:"street" db:"street"`
 	PhoneNumber string `json:"phone_number" db:"phone_number"`
 }
-
-// CREATE TABLE IF NOT EXISTS suppliers
-// (
-//     id SERIAL PRIMARY KEY,
-//     name VARCHAR(100) NOT NULL,
-//     address_id INT NOT NULL,
-//     phone_number VARCHAR(50) NOT NULL,
-//     FOREIGN KEY (address_id) REFERENCES addresses(id) ON DELETE CASCADE
-// );
